Integration Tests for Product, Online Client and Payment Methods
Integration tests for all the cases